--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media-queries.css">
 </head>
 
 <body>
@@ -23,11 +24,11 @@
     <div class="main-content">
         <!-- nav-bar -->
         <nav>
-            <div class="container main-nav flex">
+            <div class="container main-nav flex" >
                 <a href="#" class="company-logo">
                     <img  src="./assets/asset 1.png" alt="company logo">
                 </a>
-                <div class="nav-links">
+                <div class="nav-links" id="nav-links">
                     <ul class="flex">
                         <li><a href="#" class="hover-link">Products</a></li>
                         <li><a href="#" class="hover-link">Customer</a></li>
@@ -37,6 +38,9 @@
                         <li><a href="#" class="hover-link primary-button">Sign Up</a></li>
                     </ul>
                 </div>
+                <a href="#" class="nav-toggle hover-link">
+                    <i class="fa-solid fa-bars" id="nav-toggle"></i>
+                </a>
             </div>
         </nav>
 
@@ -137,7 +141,7 @@
             </div>
         </section>
         <section class="big-feature-section">
-            <div class="container flex big-feature-container" style="flex-direction: row-reverse;">
+            <div class="container flex big-feature-container" id="second-big-feature">
                 <div class="feature-image">
                     <img src="./assets/asset 21.png" alt="">
                 </div>
@@ -250,6 +254,14 @@
     </div>
 
     <script src="https://kit.fontawesome.com/fb507d0894.js" crossorigin="anonymous"></script>
+    <script>
+        const toggleButton = document.getElementById('nav-toggle');
+        const navLinks = document.getElementById('nav-links');
+
+        toggleButton.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
+    </script>
 </body>
 
 </html>
